--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "compilerOptions": {
-    "outDir": "./public",
+    "target": "es5", 
+    "module": "commonjs", 
+    "outDir": "./dist", 
     "rootDir": "./src",
-    "esModuleInterop": true,
-    "module": "commonjs",
-    "target": "es6",
-    "strict": true
-  }
+    "strict": true,
+  },
+  "include": ["src/**/*"], 
+  "exclude": ["node_modules"]
 }
