--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
-    "target": "es5", 
-    "module": "commonjs", 
-    "outDir": "./dist", 
+    "target": "es5",
+    "module": "commonjs",
+    "outDir": "./dist/",
     "rootDir": "./src",
-    "strict": true,
+    "strict": true
   },
-  "include": ["src/**/*"], 
+  "include": ["src/**/*"],
   "exclude": ["node_modules"]
 }
