--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,8 @@
 {
   "builds": [
     {
-      "src": "dist/index.html",
+      "src": "index.html",
       "use": "@vercel/static"
     }
-  ],
-  "outputDirectory": "dist/"
+  ]
 }
