--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,12 @@
 {
   "builds": [
     {
-      "src": "index.html",
+      "src": "dist/index.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "index.html",
+      "use": "@vercel/static"
     }
   ]
 }
