--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,14 @@
 {
   "builds": [
     {
-      "src": "dist/index.js",
-      "use": "@vercel/static"
-    },
-    {
       "src": "index.html",
       "use": "@vercel/static"
+    }
+  ],
+  "routes": [
+    {
+      "src": "dist/index.js",
+      "dest": "dist/index.js"
     }
   ]
 }
